// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadSidebars normal site with sidebars 1`] = `
Object {
  "docs": Object {
    "Getting Started": Array [
      "installation",
    ],
    "Guides": Array [
      "blog",
    ],
  },
}
`;

exports[`loadSidebars site with sidebars & versioned sidebars 1`] = `
Object {
  "docs": Object {
    "Getting Started": Array [
      "installation",
    ],
    "Guides": Array [
      "blog",
    ],
  },
  "version-1.0.0-docs": Object {
    "Getting Started": Array [
      "version-1.0.0-installation",
    ],
    "Guides": Array [
      "version-1.0.0-blog",
    ],
  },
  "version-1.0.1-docs": Object {
    "Getting Started": Array [
      "version-1.0.1-installation",
    ],
    "Guides": Array [
      "version-1.0.1-blog",
    ],
  },
}
`;

exports[`loadSidebars site without sidebars 1`] = `Object {}`;
